--- a/Download_data.ipynb
+++ b/Download_data.ipynb
@@ -1951,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "2e12f013",
    "metadata": {},
    "outputs": [
@@ -2102,23 +2102,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "69292e03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "79"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    " 0,   1,  11,  14,  22,  24,  26,  31,  37,  38,  39,  40,  47,\n",
-    "        49,  50,  59,  62,  63,  65,  66,  68,  69,  70,  75,  80,  81,\n",
-    "        82,  90,  91,  93,  95,  99, 100, 105, 106, 108, 110, 116, 119,\n",
-    "       124, 129, 136, 137, 145, 147, 148, 151, 153, 155, 158, 160, 164,\n",
-    "       167, 169, 171, 173, 175, 179, 180, 181, 187, 188, 190, 192, 198,\n",
-    "       200, 207, 209, 210, 211, 217, 225, 227, 230, 233, 236, 237, 241,\n",
-    "       251"
+    "inds = [0,   1,  11,  14,  22,  24,  26,  31,  37,  38,  39,  40,  47,\n",
+    "       49,  50,  59,  62,  63,  65,  66,  68,  69,  70,  75,  80,  81,\n",
+    "       82,  90,  91,  93,  95,  99, 100, 105, 106, 108, 110, 116, 119,\n",
+    "124, 129, 136, 137, 145, 147, 148, 151, 153, 155, 158, 160, 164,\n",
+    "167, 169, 171, 173, 175, 179, 180, 181, 187, 188, 190, 192, 198,\n",
+    "200, 207, 209, 210, 211, 217, 225, 227, 230, 233, 236, 237, 241,\n",
+    "251]\n",
+    "len(inds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "695c61b0",
    "metadata": {},
    "outputs": [
@@ -2126,40 +2138,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1976 world junior figure skating championships\n",
-      "2-11025881-1.html.csv\n",
-      "pierre lamine have a mere 0.16 more point than shinji someya\n",
-      "+--------+----------------------------+----------------+-----------+----------+----------+\n",
-      "|   rank | name                       | nation         |   sp_+_fs |   points |   places |\n",
-      "|--------+----------------------------+----------------+-----------+----------+----------|\n",
-      "|      1 | mark cockerell             | united states  |         1 |   172.42 |     11   |\n",
-      "|      2 | takashi mura               | japan          |         2 |   165.7  |     24   |\n",
-      "|      3 | brian pockar               | canada         |         3 |   166.62 |     23   |\n",
-      "|      4 | norbert schramm            | west germany   |         4 |   159.8  |     40   |\n",
-      "|      5 | andrew bestwick            | united kingdom |         5 |   158.1  |     48   |\n",
-      "|      6 | stephan bril               | west germany   |         7 |   155.72 |     57   |\n",
-      "|      7 | patrice macrez             | france         |         6 |   151.76 |     71   |\n",
-      "|      8 | pierre lamine              | france         |         8 |   150.5  |     79   |\n",
-      "|      9 | shinji someya              | japan          |        10 |   150.34 |     74.5 |\n",
-      "|     10 | jozef sabovčík             | czechoslovakia |         9 |   148.88 |     87   |\n",
-      "|     11 | daniel fuerer              | switzerland    |        13 |   146.18 |     92.5 |\n",
-      "|     12 | gerald schranz             | austria        |        11 |   143.04 |    102   |\n",
-      "|     13 | helmut kristofics - binder | austria        |        15 |   137.32 |    123   |\n",
-      "|     14 | michael pasfield           | australia      |        12 |   136.6  |    119   |\n",
-      "|     15 | francis demarteau          | belgium        |        14 |   131.02 |    140   |\n",
-      "|     16 | adrian vasile              | romania        |        16 |   127.74 |    143   |\n",
-      "|     17 | miljan begovic             | yugoslavia     |        17 |   127.3  |    143   |\n",
-      "|     18 | jeremy dowson              | south africa   |        18 |   114.98 |    166   |\n",
-      "|     19 | marc franquet              | belgium        |        19 |   114.38 |    167   |\n",
-      "+--------+----------------------------+----------------+-----------+----------+----------+\n",
-      "Based on the SQL query provided, Pierre Lamine received 150.5 points and Shinji Someya received 150.34 points in the 1976 World Junior Figure Skating Championships. The claim that Pierre Lamine has a mere 0.16 more points than Shinji Someya is false. The output should be 0.\n",
-      "SELECT points\n",
-      "FROM DF\n",
-      "WHERE name = 'pierre lamine' OR name = 'shinji someya';\n",
-      "   points\n",
-      "0  150.50\n",
-      "1  150.34\n",
-      "1\n"
+      "1989 u.s. open (golf)\n",
+      "2-17231086-6.html.csv\n",
+      "3 of the people tie for fifth place be from the united state\n",
+      "+---------+---------------------+---------------+-------------------------+----------+---------+\n",
+      "| place   | player              | country       | score                   | to_par   |   money |\n",
+      "|---------+---------------------+---------------+-------------------------+----------+---------|\n",
+      "| 1       | curtis strange      | united states | 71 + 64 + 73 + 70 = 278 | - 2      |  200000 |\n",
+      "| t2      | chip beck           | united states | 71 + 69 + 71 + 68 = 279 | - 1      |   67823 |\n",
+      "| t2      | mark mccumber       | united states | 70 + 68 + 72 + 69 = 279 | - 1      |   67823 |\n",
+      "| t2      | ian woosnam         | wales         | 70 + 68 + 73 + 68 = 279 | - 1      |   67823 |\n",
+      "| 5       | brian claar         | united states | 71 + 72 + 68 + 69 = 280 | e        |   34345 |\n",
+      "| t6      | masashi ozaki       | japan         | 70 + 71 + 68 + 72 = 281 | + 1      |   28220 |\n",
+      "| t6      | scott simpson       | united states | 67 + 70 + 69 + 75 = 281 | + 1      |   28220 |\n",
+      "| 8       | peter jacobsen      | united states | 71 + 70 + 71 + 70 = 282 | + 2      |   24307 |\n",
+      "| t9      | paul azinger        | united states | 71 + 72 + 70 + 70 = 283 | + 3      |   19968 |\n",
+      "| t9      | hubert green        | united states | 69 + 72 + 74 + 68 = 283 | + 3      |   19968 |\n",
+      "| t9      | tom kite            | united states | 67 + 69 + 69 + 78 = 283 | + 3      |   19968 |\n",
+      "| t9      | josé maría olazábal | spain         | 69 + 72 + 70 + 72 = 283 | + 3      |   19968 |\n",
+      "+---------+---------------------+---------------+-------------------------+----------+---------+\n",
+      "0\n"
      ]
     }
    ],
@@ -2171,17 +2169,17 @@
     "manager = SQLManager(engine)\n",
     "table_loader = TableLoader(table_name='tabfact', split='test', use_sample=False, small_test=True)\n",
     "# table_loader = TableLoader(table_name='tabfact', split='validation', use_sample=True, small_test=False)\n",
-    "i = 70\n",
+    "i = 25\n",
     "\n",
     "def show_table(data, execute=False):\n",
     "    formatter = TableFormat(format='none', data=data)\n",
     "    print(data['table']['id'])\n",
     "    print(data['statement'])\n",
     "    print(formatter.format_psql())\n",
-    "    print(preds[i])\n",
-    "    print(SQLs[i])\n",
-    "    test_df = manager.execute_from_df(SQLs[i], formatter.all_data)\n",
-    "    print(test_df)\n",
+    "    # print(preds[i])\n",
+    "    # print(SQLs[i])\n",
+    "    # test_df = manager.execute_from_df(SQLs[i], formatter.all_data)\n",
+    "    # print(test_df)\n",
     "    print(data['label'])\n",
     "print(table_loader.dataset[i]['table']['caption'])\n",
     "show_table(table_loader.dataset[i]) "
