--- a/Agent_tab copy.ipynb
+++ b/Agent_tab copy.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,11 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "task_name = 'tabfact'\n",
+    "task_name = 'wikitable'\n",
     "split = 'test'\n",
     "model_name = 'gpt-3.5-turbo-0125'\n",
     "model = ChatOpenAI(model_name=model_name, openai_api_base=\"https://api.chatanywhere.com.cn/v1\",\n",
@@ -110,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "table_loader = TableLoader(table_name='tabfact', split='test', use_sample=False, small_test=True)\n",
+    "table_loader = TableLoader(table_name=task_name, split='test', use_sample=False, small_test=False)\n",
     "sample = table_loader.normalize_table(table_loader.dataset[2])"
    ]
   },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
     "    \n",
     "    with get_openai_callback() as cb:\n",
     "        llm_chain = LLMChain(llm=model, prompt=k_shot_prompt, verbose=verbose)\n",
-    "        summary_aug, column_aug = aug_information.loc[sample['id']]['summary'], aug_information.loc[sample['id']]['column_description'] \n",
+    "        summary_aug, column_aug = aug_information.loc[sample['table']['id']]['summary'], aug_information.loc[sample['table']['id']]['column_description'] \n",
     "        col_names, col_infos = parse_output(column_aug, pattern=r'([^<]*)<([^>]*)>')\n",
     "        extra_col_info = []\n",
     "        for i_c in range(len(col_names)):\n",
@@ -529,13 +529,13 @@
     "        \n",
     "        llm_chain = LLMChain(llm=model, prompt=row_instruction, verbose=verbose)\n",
     "        columns = [formatter.normalize_col_name(c.strip()) for c in stage_1_batch_pred.split(',')]\n",
-    "        formatter.normalize_schema(schema_information.loc[sample['id']]['schema'])\n",
+    "        formatter.normalize_schema(schema_information.loc[sample['table']['id']]['schema'])\n",
     "        try: \n",
     "            formatter.data = formatter.data.loc[:, columns]\n",
     "            formatter.all_data = formatter.all_data.loc[:, columns]\n",
     "        except:\n",
     "            pass\n",
-    "        extra_information = '\\n'.join(parse_specific_composition(composition_information.loc[sample['id']]['composition'], formatter.data.columns))\n",
+    "        extra_information = '\\n'.join(parse_specific_composition(composition_information.loc[sample['table']['id']]['composition'], formatter.data.columns))\n",
     "        stage_2_batch_pred = llm_chain.batch([dict({'table': formatter.format_html(table_caption=sample['table']['caption']),\n",
     "                                            'claim': query,\n",
     "                                            'aug':  summary_aug + '\\n Column information:' + extra_information\n",
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1086,7 @@
     "    k_shot_prompt = get_k_shot_with_aug()\n",
     "    with get_openai_callback() as cb:\n",
     "        llm_chain = LLMChain(llm=model, prompt=k_shot_prompt, verbose=verbose)\n",
-    "        summary_aug, column_aug = aug_information.loc[sample['id']]['summary'], aug_information.loc[sample['id']]['column_description'] \n",
+    "        summary_aug, column_aug = aug_information.loc[sample['table']['id']]['summary'], aug_information.loc[sample['table']['id']]['column_description'] \n",
     "        col_names, col_infos = parse_output(column_aug, pattern=r'([^<]*)<([^>]*)>')\n",
     "        extra_col_info = []\n",
     "        for i_c in range(len(col_names)):\n",
@@ -1107,8 +1107,8 @@
     "            formatter.all_data = formatter.all_data.loc[:, columns]\n",
     "        except:\n",
     "            pass\n",
-    "        formatter.normalize_schema(schema_information.loc[sample['id']]['schema'])\n",
-    "        extra_information = '\\n'.join(parse_specific_composition(composition_information.loc[sample['id']]['composition'], formatter.data.columns))\n",
+    "        formatter.normalize_schema(schema_information.loc[sample['table']['id']]['schema'])\n",
+    "        extra_information = '\\n'.join(parse_specific_composition(composition_information.loc[sample['table']['id']]['composition'], formatter.data.columns))\n",
     "        stage_2_batch_pred = llm_chain.batch([dict({'table': formatter.format_html(table_caption=sample['table']['caption']),\n",
     "                                            'claim': query,\n",
     "                                            'aug':  summary_aug + '\\n Column information:' + extra_information\n",
@@ -1133,43 +1133,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[' who finish in first place and who do not manage to get in the top 3?', 'How many skaters finished in the top 3?', ' Who finished in first place?']\n",
-      "name -> belinda coulthard; rank -> 28\n",
-      "Columns: name\n",
-      "rank -> top 3; \n",
-      "Columns: rank\n",
-      "SELECT name\n",
+      "[' which players scored at most 1 total goal?', 'How many players scored at most 1 total goal?', ' Who are the players that scored at most 1 total goal?']\n",
+      "Column linking: scored at most 1 total goal -> Total_Goals\n",
+      "Columns: Player, Total_Goals\n",
+      "Column linking: scored -> Total_Goals; at most 1 -> 1\n",
+      "Columns: Total_Goals\n",
+      "SELECT Player\n",
       "FROM DF\n",
-      "ORDER BY name\n",
-      "LIMIT 1;\n",
+      "WHERE Total_Goals <= 1;\n",
+      "    Column linking: scored -> Total_Goals; at most 1 -> 1\n",
+      "    Columns: Player, Total_Goals\n",
       "SELECT COUNT(*) \n",
       "FROM DF \n",
-      "WHERE rank <= 3;\n",
-      "total_tokens: 1366\n",
-      "total_tokens: 1364\n",
-      "name -> name; rank -> rank\n",
-      "Columns: name, rank\n",
-      "SELECT name\n",
+      "WHERE Total_Goals <= 1;\n",
+      "total_tokens: 1576\n",
+      "SELECT Player\n",
       "FROM DF\n",
-      "WHERE rank = 1\n",
-      "UNION\n",
-      "SELECT name\n",
+      "WHERE Total_Goals <= 1;\n",
+      "total_tokens: 1444\n",
+      "total_tokens: 1571\n",
+      "    Column linking: players -> Player; scored at most 1 total goal -> Total_Goals\n",
+      "    Columns: Player, Total_Goals\n",
+      "total_tokens: 1308\n",
+      "SELECT Player\n",
       "FROM DF\n",
-      "WHERE rank > 3;\n",
-      "total_tokens: 2054\n",
-      "linda fratianne -> name; first place -> rank; anett pötzsch -> name; top 3 -> rank\n",
-      "Columns: name, rank\n",
-      "total_tokens: 1316\n",
-      "SELECT name, rank\n",
-      "FROM DF\n",
-      "WHERE name = 'linda fratianne' OR name = 'anett pötzsch';\n",
+      "WHERE Total_Goals <= 1;\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
@@ -1178,31 +1173,36 @@
       "Below is a sub-table generated by excuting the corresponding SQL. You need to understand the logic behind the SQL filtering. Complete task with the help of extra information below.\n",
       "\n",
       "SQL Excuted: \n",
-      "```SELECT name, rank\n",
+      "```SELECT Player\n",
       "FROM DF\n",
-      "WHERE name = 'linda fratianne' OR name = 'anett pötzsch';```\n",
+      "WHERE Total_Goals <= 1;```\n",
       "Sub-table:\n",
       "<table>\n",
       "<thead>\n",
-      "<tr><th>           name</th><th>  rank</th></tr>\n",
+      "<tr><th>   Player</th></tr>\n",
       "</thead>\n",
       "<tbody>\n",
-      "<tr><td>linda fratianne</td><td>1     </td></tr>\n",
-      "<tr><td>anett pötzsch  </td><td>2     </td></tr>\n",
+      "<tr><td>Cahill   </td></tr>\n",
+      "<tr><td>Colosimo </td></tr>\n",
+      "<tr><td>Culina   </td></tr>\n",
+      "<tr><td>Elrich   </td></tr>\n",
+      "<tr><td>Griffiths</td></tr>\n",
+      "<tr><td>Skoko    </td></tr>\n",
+      "<tr><td>Zdrilic  </td></tr>\n",
       "</tbody>\n",
       "</table>\n",
       "Extra information:\n",
-      "The individuals who finished in first place are Anita Siegfried, and those who did not manage to get in the top 3 are Astrid Jansen in de Wal, Belinda Coulthard, Bodil Olsson, Carola Weißenberg, Carrie Rugh, Claudia Kristofics - Binder, Corine Wyrsch, Dagmar Lurz, Deborah Cottrill, Denise Biellmann, Franca Bianconi, Gloria Mas, Janet Morrissey, Jeanne Chapman, Karin Riediger, Katie Symmonds, Kim Myo Sil, Kira Ivanova, Kristiina Wegelius, Linda Fratianne, Lisa - Marie Allen, Natalia Strelkova, Petra Ernert, Reiko Kobayashi, Renata Baierova, Sanda Dubravčić, Shin Hae Sook, and Susanna Driano.\n",
-      "Based on the sub-table, 3 skaters finished in the top 3.\n",
-      "Anett Pötzsch finished in first place.\n",
+      "The players who scored at most 1 total goal are Cahill, Colosimo, Culina, Elrich, Griffiths, Skoko, and Zdrilic.\n",
+      "Based on the sub-table generated from the SQL query, there are 7 players who scored at most 1 total goal.\n",
+      "The players who scored at most 1 total goal are Cahill, Colosimo, Culina, Elrich, Griffiths, Skoko, and Zdrilic.\n",
       "\n",
-      "Query: linda fratianne finish in first place , but anett pötzsch do not manage to get in the top 3\n",
-      "Task: verify whether the provided claim/query is true or false, return 0 if it's false, or 1 if it's true. Please think step by step and return 0/1 at last.\n",
+      "Query: players who scored at most 1 total goal\n",
+      "Task: answer the last question given in the query. Only return the string instead of other format information. Do not repeat the question.\n",
       "\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{'text': 'To verify the claim, we need to check the rankings of Linda Fratianne and Anett Pötzsch based on the provided information.\\n\\nFrom the sub-table:\\n- Linda Fratianne finished in 1st place.\\n- Anett Pötzsch finished in 2nd place.\\n\\nGiven that Linda Fratianne finished in 1st place and Anett Pötzsch finished in the top 3 (2nd place), the claim that Linda Fratianne finished in 1st place but Anett Pötzsch did not manage to get in the top 3 is false.\\n\\nTherefore, the claim is false, and the answer is 0.'}\n",
-      "ALL TOKENS 7172\n"
+      "{'text': 'Cahill, Colosimo, Culina, Elrich, Griffiths, Skoko, Zdrilic'}\n",
+      "ALL TOKENS 6872\n"
      ]
     }
    ],
@@ -1211,7 +1211,7 @@
     "from langchain_openai import ChatOpenAI, OpenAI\n",
     "import datetime\n",
     "\n",
-    "table_loader = TableLoader(table_name='tabfact', split='test', use_sample=False, small_test=True)\n",
+    "table_loader = TableLoader(table_name='wikitable', split='test', use_sample=True, small_test=False)\n",
     "model = ChatOpenAI(model_name='gpt-3.5-turbo-0125', openai_api_base=\"https://api.chatanywhere.com.cn/v1\",\n",
     "                       openai_api_key=\"sk-kxgtm71G6zwC44lglIF5CfiEVVzjjc39TOtppkNAwrVA2fUW\", temperature=0.01)\n",
     "save_path = f\"result/answer/tabfact_zh_{datetime.datetime.now().strftime('%m-%d_%H-%M-%S')}.csv\"\n",
@@ -1228,14 +1228,16 @@
     "{information}\n",
     "\n",
     "Query: {query}\n",
-    "Task: verify whether the provided claim/query is true or false, return 0 if it's false, or 1 if it's true. Please think step by step and return 0/1 at last.\n",
+    "Task: answer the last question given in the query. Only return the string instead of other format information. Do not repeat the question.\n",
     "\"\"\" )\n",
+    "# Task: answer the last question given in the query. Only return the string instead of other format information. Do not repeat the question.\n",
+    "# Task: verify whether the provided claim/query is true or false, return 0 if it's false, or 1 if it's true. Please think step by step and return 0/1 at last.\n",
     "tokens = []\n",
     "outputs = []\n",
     "labels = []\n",
     "# muilti_answer_instruction = get_k_shot_with_answer()\n",
     "\n",
-    "i = 66\n",
+    "i = 60\n",
     "sample = table_loader.normalize_table(\n",
     "                    table_loader.dataset[i])\n",
     "all_tokens = 0\n",
@@ -1377,13 +1379,7 @@
    "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "count = 0\n",
-    "for i in range(len(table_loader.dataset)):\n",
-    "    if table_loader.dataset[i]['hardness'] == 'complex':\n",
-    "        count += 1\n",
-    "        "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1500,16 +1496,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'page/203-page/116.page'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'csv/203-csv/116.csv'.replace(\"csv\", \"page\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'page/203-page/116.json'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "original_string = 'csv/203-csv/116.csv'\n",
+    "test = re.sub('csv', 'page', original_string, count=2)\n",
+    "re.sub('\\.csv', '.json', test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'start': 7,\n",
+       " 'end': 9,\n",
+       " 'resolution': {'value': '2'},\n",
+       " 'text': 'two',\n",
+       " 'type_name': 'number'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from recognizers_number import NumberRecognizer\n",
+    "import recognizers_suite as Recognizers\n",
+    "from recognizers_suite import Culture, ModelResult\n",
     "culture = Culture.English\n",
-    "user_input = \"I have two apple will return \"2\"\n",
-    "recognizer = NumberRecognizer(Culture.English)\n",
-    "model = recognizer.get_number_model()\n",
-    "result = model.parse('Twelve')"
+    "user_input = 'I have two apple will return \"2\"'\n",
+    "Recognizers.recognize_number(user_input, culture)[0].__dict__"
    ]
   },
   {
@@ -1587,7 +1641,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<recognizers_text.model.ModelResult object at 0x7f9c2eac3760>]\n"
+      "[<recognizers_text.model.ModelResult object at 0x7fd7edbdfbe0>]\n"
      ]
     }
    ],
@@ -1604,10 +1658,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "import recognizers_suite\n",
     "def str_normalize(user_input, recognition_types=None):\n",
     "    \"\"\"A string normalizer which recognize and normalize value based on recognizers_suite\"\"\"\n",
     "    user_input = str(user_input)\n",
@@ -1672,6 +1728,119 @@
     "        # '2008-04-13 00:00:00' -> '2008-04-13'\n",
     "    return user_input"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "def normalize_answer(s):\n",
+    "    def remove_articles(text):\n",
+    "        return re.sub(re.compile(r\"\\b(a|an|the)\\b\", re.UNICODE), \" \", text)\n",
+    "\n",
+    "    def whilt_space_fix(text):\n",
+    "        return \" \".join(text.split())\n",
+    "\n",
+    "    def remove_punc(text):\n",
+    "        exclude = set(string.punctuation)\n",
+    "        return \"\".join(ch for ch in text if ch not in exclude)\n",
+    "\n",
+    "    def lower(text):\n",
+    "        return text.lower()\n",
+    "\n",
+    "    return whilt_space_fix(remove_articles(remove_punc(lower(s))))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'cahill' == 'cahill colosimo culina elrich griffiths skoko zdrilic'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compute_exact(a_gold, a_pred):\n",
+    "    return int(normalize_answer(a_gold) == normalize_answer(a_pred))\n",
+    "compute_exact('Cahill', 'Cahill, Colosimo, Culina, Elrich, Griffiths, Skoko, Zdrilic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cahill colosimo culina elrich griffiths skoko zdrilic'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize_answer('Cahill, Colosimo, Culina, Elrich, Griffiths, Skoko, Zdrilic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Cahill, Colosimo, Culina, Elrich, Griffiths, Skoko, Zdrilic'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str_normalize('Cahill, Colosimo, Culina, Elrich, Griffiths, Skoko, Zdrilic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
