--- a/Download_data.ipynb
+++ b/Download_data.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "679c1edc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(1931, 4, 29, 0, 0)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dateutil import parser\n",
+    "parser.parse('1931')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "id": "f1c1feb5",
    "metadata": {},
@@ -63,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "c1aebf6d-8a64-433c-84a0-d38e50c6f30a",
    "metadata": {},
    "outputs": [],
@@ -71,60 +93,243 @@
     "# transform data into sqlite database\n",
     "from data_loader import TableLoader\n",
     "\n",
-    "table_loader = TableLoader(table_name='tabfact', split='test', use_sample=True, small_test=True)\n",
+    "table_loader = TableLoader(table_name='wikitable', split='test', use_sample=True, small_test=False)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "511cb4c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 'nt-14053',\n",
-       " 'annotator': 0,\n",
-       " 'position': 1,\n",
-       " 'question': 'who were the captains of those boats?',\n",
-       " 'question_and_history': ['what boats were lost on may 5?',\n",
-       "  'who were the captains of those boats?'],\n",
-       " 'table_file': 'table_csv/203_386.csv',\n",
-       " 'table_header': ['Date',\n",
-       "  'Number',\n",
-       "  'Type',\n",
-       "  'Captain',\n",
-       "  'Casualties',\n",
-       "  'Sunk by'],\n",
-       " 'table_data': [['4 May 1943',\n",
-       "   'U-209',\n",
-       "   'VIIC',\n",
-       "   'Heinrich Brodda',\n",
-       "   '46',\n",
-       "   'Catalina Flying-boat of No. 5 Squadron RCAF'],\n",
-       "  ['5 May 1943', 'U-638', 'VIIC', 'Oskar Staudinger', '44', 'HMS Sunflower'],\n",
-       "  ['5 May 1943', 'U-531', 'IXC/40', 'Herbert Neckel', '54', 'HMS Vidette'],\n",
-       "  ['6 May 1943', 'U-192', 'IXC/40', 'Werner Happe', '55', 'HMS Loosestrife'],\n",
-       "  ['6 May 1943',\n",
-       "   'U-125',\n",
-       "   'IXC',\n",
-       "   'Ulrich Folkers',\n",
-       "   '54',\n",
-       "   'HMS Oribi, HMS Snowflake'],\n",
-       "  ['6 May 1943', 'U-630', 'VIIC', 'Werner Winkler', '47', 'HMS Vidette'],\n",
-       "  ['6 May 1943', 'U-438', 'VIIC', 'Heinrich Hensohn', '48', 'HMS Pelican']],\n",
-       " 'answer_coordinates': {'row_index': [1, 2], 'column_index': [3, 3]},\n",
-       " 'answer_text': ['Oskar Staudinger', 'Herbert Neckel']}"
+       "{'id': 'nu-3365',\n",
+       " 'question': 'did dmitry mikhailovich golitsyn or andrey kirillovich razumovsky serve as ambassador longer?',\n",
+       " 'answers': ['Dmitry Mikhailovich Golitsyn'],\n",
+       " 'caption': 'List of Ambassadors of Russia to Austria',\n",
+       " 'table': {'header': ['Name',\n",
+       "   'Title',\n",
+       "   'Date from',\n",
+       "   'Date until',\n",
+       "   'Russian state',\n",
+       "   'Austrian state'],\n",
+       "  'rows': [['Dmitry Mikhailovich Golitsyn',\n",
+       "    'Ambassador',\n",
+       "    'October 1761',\n",
+       "    'April 1792',\n",
+       "    'Russian Empire',\n",
+       "    'Holy Roman Empire'],\n",
+       "   ['Andrey Kirillovich Razumovsky',\n",
+       "    'Ambassador',\n",
+       "    '5 October 1801',\n",
+       "    '7 September 1806',\n",
+       "    'Russian Empire',\n",
+       "    'Holy Roman Empire/Austrian Empire'],\n",
+       "   ['Gustav Ernst Graf von Stackelberg',\n",
+       "    'Ambassador',\n",
+       "    '14 May 1810',\n",
+       "    '9 November 1818',\n",
+       "    'Russian Empire',\n",
+       "    'Austrian Empire'],\n",
+       "   ['Yury Aleksandrovich Golovkin',\n",
+       "    'Envoy',\n",
+       "    '9 November 1818',\n",
+       "    '16 September 1822',\n",
+       "    'Russian Empire',\n",
+       "    'Austrian Empire'],\n",
+       "   ['Dmitry Pavlovich Tatishchev',\n",
+       "    'Ambassador',\n",
+       "    '22 August 1826',\n",
+       "    '11 September 1841',\n",
+       "    'Russian Empire',\n",
+       "    'Austrian Empire'],\n",
+       "   ['Pavel Ivanovich Medem',\n",
+       "    'Envoy',\n",
+       "    '24 December 1848',\n",
+       "    '31 August 1850',\n",
+       "    'Russian Empire',\n",
+       "    'Austrian Empire'],\n",
+       "   ['Peter von Meyendorff',\n",
+       "    'Envoy',\n",
+       "    '31 August 1850',\n",
+       "    '7 January 1854',\n",
+       "    'Russian Empire',\n",
+       "    'Austrian Empire'],\n",
+       "   ['Aleksandr Mikhailovich Gorchakov',\n",
+       "    'Envoy Extraordinary and Minister Plenipotentiary',\n",
+       "    '6 May 1854',\n",
+       "    '15 April 1856',\n",
+       "    'Russian Empire',\n",
+       "    'Austrian Empire'],\n",
+       "   ['Viktor Petrovich Balabin',\n",
+       "    'Envoy',\n",
+       "    '22 July 1864',\n",
+       "    '12 August 1864',\n",
+       "    'Russian Empire',\n",
+       "    'Austrian Empire'],\n",
+       "   ['Ernest Gustavovich Stackelberg',\n",
+       "    'Envoy',\n",
+       "    '3 August 1864',\n",
+       "    '25 April 1868',\n",
+       "    'Russian Empire',\n",
+       "    'Austrian Empire/Austria-Hungary'],\n",
+       "   ['Nikolay Alexeyevich Orlov',\n",
+       "    'Envoy',\n",
+       "    '13 December 1869',\n",
+       "    '2 May 1870',\n",
+       "    'Russian Empire',\n",
+       "    'Austria-Hungary'],\n",
+       "   ['Yevgeny Petrovich Novikov',\n",
+       "    'Ambassador',\n",
+       "    '2 March 1874',\n",
+       "    '22 December 1879',\n",
+       "    'Russian Empire',\n",
+       "    'Austria-Hungary'],\n",
+       "   ['Pavel Petrovich Ubri',\n",
+       "    'Ambassador',\n",
+       "    '22 December 1879',\n",
+       "    '1 June 1882',\n",
+       "    'Russian Empire',\n",
+       "    'Austria-Hungary'],\n",
+       "   ['Aleksey Borisovich Lobanov-Rostovsky',\n",
+       "    'Ambassador',\n",
+       "    '13 July 1882',\n",
+       "    '6 January 1895',\n",
+       "    'Russian Empire',\n",
+       "    'Austria-Hungary'],\n",
+       "   ['Pyotr Alekseyevich Kapnist',\n",
+       "    'Ambassador',\n",
+       "    '9 April 1895',\n",
+       "    '1904',\n",
+       "    'Russian Empire',\n",
+       "    'Austria-Hungary'],\n",
+       "   ['Lev Pavlovich Urusov',\n",
+       "    'Ambassador',\n",
+       "    '1905',\n",
+       "    '1910',\n",
+       "    'Russian Empire',\n",
+       "    'Austria-Hungary'],\n",
+       "   ['Voldemar Khristianovich Aussem',\n",
+       "    'Plenipotentiary Representative',\n",
+       "    '21 May 1924',\n",
+       "    '10 December 1924',\n",
+       "    'Soviet Union',\n",
+       "    'Federal State of Austria'],\n",
+       "   ['Adolf Abramovich Ioffe',\n",
+       "    'Plenipotentiary Representative',\n",
+       "    '12 December 1924',\n",
+       "    '19 June 1925',\n",
+       "    'Soviet Union',\n",
+       "    'Federal State of Austria'],\n",
+       "   ['Yan Antonovich Berzin',\n",
+       "    'Plenipotentiary',\n",
+       "    '19 June 1925',\n",
+       "    '7 September 1927',\n",
+       "    'Soviet Union',\n",
+       "    'Federal State of Austria'],\n",
+       "   ['Konstantin Konstantinovich Yurenev',\n",
+       "    'Plenipotentiary',\n",
+       "    '1 October 1927',\n",
+       "    '24 January 1933',\n",
+       "    'Soviet Union',\n",
+       "    'Federal State of Austria'],\n",
+       "   ['Adolf Markovich Petrovsky',\n",
+       "    'Plenipotentiary',\n",
+       "    '1 April 1933',\n",
+       "    '10 November 1934',\n",
+       "    'Soviet Union',\n",
+       "    'Federal State of Austria'],\n",
+       "   ['Ivan Leopoldovich Lorents',\n",
+       "    'Plenipotentiary',\n",
+       "    '17 March 1935',\n",
+       "    '31 September 1938',\n",
+       "    'Soviet Union',\n",
+       "    'Federal State of Austria'],\n",
+       "   ['Ivan Ivanovich Ilyichev',\n",
+       "    'Supreme Commissar of the USSR/Ambassador Extraordinary and Plenipotentiary',\n",
+       "    '13 June 1953',\n",
+       "    '31 March 1956',\n",
+       "    'Soviet Union',\n",
+       "    'Republic of Austria'],\n",
+       "   ['Andrey Andreyevich Smirnov',\n",
+       "    'Ambassador Extraordinary and Plenipotentiary',\n",
+       "    '31 March 1956',\n",
+       "    '14 October 1956',\n",
+       "    'Soviet Union',\n",
+       "    'Republic of Austria'],\n",
+       "   ['Sergey Georgyevich Lapin',\n",
+       "    'Ambassador Extraordinary and Plenipotentiary',\n",
+       "    '19 October 1956',\n",
+       "    '16 June 1960',\n",
+       "    'Soviet Union',\n",
+       "    'Republic of Austria'],\n",
+       "   ['Viktor Ivanovich Avilov',\n",
+       "    'Ambassador Extraordinary and Plenipotentiary',\n",
+       "    '16 June 1960',\n",
+       "    '13 June 1965',\n",
+       "    'Soviet Union',\n",
+       "    'Republic of Austria'],\n",
+       "   ['Boris Fedorovich Podtserob',\n",
+       "    'Ambassador Extraordinary and Plenipotentiary',\n",
+       "    '30 June 1965',\n",
+       "    '20 September 1971',\n",
+       "    'Soviet Union',\n",
+       "    'Republic of Austria'],\n",
+       "   ['Averky Borisovich Aristov',\n",
+       "    'Ambassador Extraordinary and Plenipotentiary',\n",
+       "    '20 September 1971',\n",
+       "    '11 July 1973',\n",
+       "    'Soviet Union',\n",
+       "    'Republic of Austria'],\n",
+       "   ['Mikhail Timofeyevich Yefremov',\n",
+       "    'Ambassador Extraordinary and Plenipotentiary',\n",
+       "    '10 March 1975',\n",
+       "    '24 October 1986',\n",
+       "    'Soviet Union',\n",
+       "    'Republic of Austria'],\n",
+       "   ['Gennady Serafimovich Shikin',\n",
+       "    'Ambassador Extraordinary and Plenipotentiary',\n",
+       "    '24 October 1986',\n",
+       "    '24 May 1990',\n",
+       "    'Soviet Union',\n",
+       "    'Republic of Austria'],\n",
+       "   ['Valery Nikolayevich Popov',\n",
+       "    'Ambassador Extraordinary and Plenipotentiary',\n",
+       "    '24 May 1990',\n",
+       "    '30 August 1996',\n",
+       "    'Soviet Union/Russian Federation',\n",
+       "    'Republic of Austria'],\n",
+       "   ['Vladimir Mikhailovich Grinin',\n",
+       "    'Ambassador Extraordinary and Plenipotentiary',\n",
+       "    '30 August 1996',\n",
+       "    '29 April 2000',\n",
+       "    'Russian Federation',\n",
+       "    'Republic of Austria'],\n",
+       "   ['Alexander Vasiliyevich Golovin',\n",
+       "    'Ambassador Extraordinary and Plenipotentiary',\n",
+       "    '4 August 2000',\n",
+       "    '6 August 2004',\n",
+       "    'Russian Federation',\n",
+       "    'Republic of Austria'],\n",
+       "   ['Stanislav Viliorovich Osadchy',\n",
+       "    'Ambassador Extraordinary and Plenipotentiary',\n",
+       "    '14 September 2004',\n",
+       "    'Present',\n",
+       "    'Russian Federation',\n",
+       "    'Republic of Austria']],\n",
+       "  'name': 'csv/203-csv/840.tsv'}}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sqa['validation'][1]"
+    "table_loader.dataset[0]"
    ]
   },
   {
